// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> renders a slider for child elements (dragging disabled) 1`] = `
<div
  className="slider-card card"
  size="large"
  style={Object {}}
>
  <div
    className="card-body"
    style={
      Object {
        "paddingBottom": 40,
        "paddingTop": 0,
      }
    }
  >
    <div
      beforeChange={[Function]}
      className="centered"
      dots={true}
      draggable={false}
      fade={false}
      goto={0}
      infinite={false}
      interval={null}
      nextArrow={
        <NextArrow
          className=""
          onClick={[Function]}
          pagination="bottom"
          t={[Function]}
        />
      }
      onClick={[Function]}
      pagination="bottom"
      prevArrow={
        <PreviousArrow
          className=""
          onClick={[Function]}
          pagination="bottom"
          t={[Function]}
        />
      }
      slidesToScroll={1}
      slidesToShow={1}
      speed={1000}
      style={
        Object {
          "userSelect": "inherit",
        }
      }
      swipe={false}
      t={[Function]}
      title={null}
    >
      0
    </div>
  </div>
</div>
`;

exports[`<Slider /> renders a slider for child elements (with title) 1`] = `
<div
  className="slider-card card"
  size="large"
  style={Object {}}
>
  <h3
    className="card-header"
  >
    Questions
    <span
      style={
        Object {
          "float": "right",
        }
      }
    >
      1
       / 
      3
    </span>
  </h3>
  <div
    className="card-body"
    style={
      Object {
        "paddingBottom": 40,
        "paddingTop": 0,
      }
    }
  >
    <div
      beforeChange={[Function]}
      className="centered"
      dots={true}
      draggable={false}
      fade={false}
      goto={0}
      infinite={false}
      interval={null}
      nextArrow={
        <NextArrow
          className=""
          onClick={[Function]}
          pagination="bottom"
          t={[Function]}
        />
      }
      onClick={[Function]}
      pagination="bottom"
      prevArrow={
        <PreviousArrow
          className=""
          onClick={[Function]}
          pagination="bottom"
          t={[Function]}
        />
      }
      slidesToScroll={1}
      slidesToShow={1}
      speed={1000}
      style={
        Object {
          "userSelect": "inherit",
        }
      }
      swipe={false}
      t={[Function]}
      title="Questions"
    >
      0
    </div>
  </div>
</div>
`;

exports[`<Slider /> renders a slider for child elements (without dots for navigation) 1`] = `
<div
  className="slider-card card"
  size="large"
  style={Object {}}
>
  <div
    className="card-body"
    style={
      Object {
        "paddingBottom": 40,
        "paddingTop": 0,
      }
    }
  >
    <div
      beforeChange={[Function]}
      className="centered"
      dots={false}
      draggable={false}
      fade={false}
      goto={0}
      infinite={false}
      interval={null}
      nextArrow={
        <NextArrow
          className=""
          onClick={[Function]}
          pagination="bottom"
          t={[Function]}
        />
      }
      onClick={[Function]}
      pagination="bottom"
      prevArrow={
        <PreviousArrow
          className=""
          onClick={[Function]}
          pagination="bottom"
          t={[Function]}
        />
      }
      slidesToScroll={1}
      slidesToShow={1}
      speed={1000}
      style={
        Object {
          "userSelect": "inherit",
        }
      }
      swipe={false}
      t={[Function]}
      title={null}
    >
      0
    </div>
  </div>
</div>
`;

exports[`<Slider /> renders a slider for child elements 1`] = `
<div
  className="slider-card card"
  size="large"
  style={Object {}}
>
  <div
    className="card-body"
    style={
      Object {
        "paddingBottom": 40,
        "paddingTop": 0,
      }
    }
  >
    <div
      beforeChange={[Function]}
      className="centered"
      dots={true}
      draggable={false}
      fade={false}
      goto={0}
      infinite={false}
      interval={null}
      nextArrow={
        <NextArrow
          className=""
          onClick={[Function]}
          pagination="bottom"
          t={[Function]}
        />
      }
      onClick={[Function]}
      pagination="bottom"
      prevArrow={
        <PreviousArrow
          className=""
          onClick={[Function]}
          pagination="bottom"
          t={[Function]}
        />
      }
      slidesToScroll={1}
      slidesToShow={1}
      speed={1000}
      style={
        Object {
          "userSelect": "inherit",
        }
      }
      swipe={false}
      t={[Function]}
      title={null}
    >
      0
    </div>
  </div>
</div>
`;
